---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/enums.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
pub mod defs {
    use super::*;
    pub use arc_script::arcorn;
    pub use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
    pub use arcon::prelude::*;
    #[arcorn::rewrite]
    pub enum Foo {
        Foo_Bar(u32),
        Foo_Baz(f32),
    }
    pub fn main() -> () {
        let y_1_0 = 200u32;
        let y_1_1 = 2f32;
        let y_1_2 = arcorn::enwrap!(Foo_Bar, y_1_0);
        let y_1_3 = arcorn::unwrap!(Foo_Bar, y_1_2);
        let y_1_4 = arcorn::enwrap!(Foo_Baz, y_1_1);
        let y_1_5 = arcorn::is!(Foo_Baz, y_1_4);
        let y_1_6 = ();
        y_1_6
    }
}
pub use defs::*;


